--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -5,8 +5,12 @@
     <title>Hello</title>
 </head>
 <body>
-Hello!
-
+<h4>Hello!</h4>
+<p>
 <a href="/first/goodbye">Say goodbye</a> or <a href="/exit">Exit</a>
+</p>
+<p>
+    <a href="/first/hello?name=Nail&surname=Alishev">Say hello me</a>
+</p>
 </body>
 </html>
