--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -12,5 +12,8 @@
 <p>
     <a href="/first/hello?name=Nail&surname=Alishev">Say hello me</a>
 </p>
+<p th:text="${message}">
+
+</p>
 </body>
 </html>
