--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -2,10 +2,29 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Человек</title>
+    <title>People</title>
+    <style>
+        .bbb {
+            border: 1px solid;
+            border-collapse: collapse;
+            margin: 10px;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
-<p th:text="${person.getName()}">VALUE</p>
-<p th:text="${person.getId()}">VALUE</p>
+<table class="bbb" >
+    <tr>
+        <td class="bbb" th:text="${person.getId()}">VALUE</td>
+        <td class="bbb" th:text="${person.getName()}">VALUE</td>
+
+        <td class="bbb" ><a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a></td>
+        <td class="bbb" >
+        <form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
+            <input type="submit" value="Delete"/>
+        </form>
+        </td>
+    </tr>
+</table>
 </body>
 </html>
